# voynichMS

./: .gitignore  .ruff.toml  ARCHITECTURE.md  AUDIT_LOG.md  CHANGELOG.md  CITATION.cff  CONFIG_REFERENCE.md  CONTRIBUTING.md  DATA_SOURCES.md  METHODS_REFERENCE.md  NEXT_STEPS.md  PHASE_DEPENDENCIES.md  README.md  REPRODUCIBILITY.md  RULES_FOR_AGENTS.md  STATUS.md  VISION_AND_MASTER_ROADMAP.md  acceptance_test.py  debug_import.py  pyproject.toml  replicateResults.md  requirements-lock.txt  requirements.txt  ~$ynich_Research_Summary_Draft.docx
.github/workflows/: ci.yml  reproduce.yml
configs/analysis/: anomaly_observed.json  thresholds.json
configs/audit/: provenance_runner_contract.json  sensitivity_artifact_contract.json
configs/core_audit/: provenance_runner_contract.json  release_evidence_policy.json  sensitivity_artifact_contract.json
configs/core_skeptic/: sk_h1_multimodal_policy.json  sk_h1_multimodal_status_policy.json  sk_h2_claim_language_policy.json  sk_h3_control_comparability_policy.json  sk_h3_data_availability_policy.json  sk_m1_closure_policy.json  sk_m2_comparative_uncertainty_policy.json  sk_m3_report_coherence_policy.json  sk_m4_provenance_policy.json
configs/functional/: baselines.json  model_params.json  synthesis_params.json
configs/phase10_admissibility/: stage1b_upgrade_gate.json  stage5_high_roi_gate.json  stage5b_k_adjudication_gate.json
configs/project/: phase_manifest.json  script_interface_tiers.json  threshold_registry.json  unreferenced_module_tiers.json
configs/skeptic/: sk_h1_multimodal_policy.json  sk_h1_multimodal_status_policy.json  sk_h2_claim_language_policy.json  sk_h3_control_comparability_policy.json  sk_h3_data_availability_policy.json  sk_m1_closure_policy.json  sk_m2_comparative_uncertainty_policy.json  sk_m3_report_coherence_policy.json  sk_m4_provenance_policy.json
data/: corpora_manifest.json  illustration_features.json
data/corpora/: cross_linguistic_manifest.json
data/external_corpora/: arabic.txt  english.txt  finnish.txt  german.txt  greek.txt  hebrew.txt  hungarian.txt  japanese.txt  mandarin.txt  russian.txt  turkish.txt  vietnamese.txt
data/inference/: latin_corpus.txt
docs/: ARCHITECTURE.md  CALIBRATION_NOTES.md  CLAIM_BOUNDARY_POLICY.md  CLOSURE_CONDITIONALITY_POLICY.md  COMPARATIVE_UNCERTAINTY_POLICY.md  CONFIG_REFERENCE.md  CONTROL_COMPARABILITY_POLICY.md  FEATURE_RANGES.md  GENERATOR_MATCHING.md  GLOSSARY.md  HISTORICAL_PROVENANCE_POLICY.md  METHODS_REFERENCE.md  METRICS.md  MULTIMODAL_COUPLING_POLICY.md  PROVENANCE.md  REOPENING_CRITERIA.md  REPORT_COHERENCE_POLICY.md  REPRODUCIBILITY.md  RUNBOOK.md  SENSITIVITY_ANALYSIS.md
docs/audit/: DATA_POPULATION_STATUS.md  INVENTORY.md  NEXT_STEPS.md
docs/inference/: CORPUS_CONSTRUCTION.md
governance/: DEVELOPER_GUIDE.md  PAPER_CODE_CONCORDANCE.md  PHASE_10_METHODS_SUMMARY.md  PROJECT_CLOSURE_SUMMARY.md  RELEASE_SCOPE.md  SCRIPT_INTERFACE_TIERS.md  THRESHOLDS_RATIONALE.md  architecture.md  claim_artifact_map.md  config_reference.md  glossary.md  methods_reference.md  reproducibility.md  runbook.md
governance/core_audit/: baseline_runs.json  code_audit_report.md  data_population_status.md  historical_provenance_policy.md  inventory.md  next_steps.md  re_audit_2026_02_07.md  remediation_status.md  unreferenced_module_triage.md
governance/core_skeptic/: claim_boundary_policy.md  closure_conditionality_policy.md  reopening_criteria.md  report_coherence_policy.md
governance/phase1_foundation/: calibration_notes.md  config_reference.md  metrics.md  provenance.md
governance/phase2_analysis/: sensitivity_analysis.md
governance/phase3_synthesis/: control_comparability_policy.md  generator_matching.md
governance/phase4_inference/: corpus_construction.md
governance/phase5_mechanism/: multimodal_coupling_policy.md
governance/phase8_comparative/: comparative_uncertainty_policy.md
planning/: opportunities_execution_plan.md
planning/analysis/: MASTER_ROADMAP.md  PHASE_2_2_EXECUTION_PLAN.md  PHASE_2_4_EXECUTION_PLAN.md  Phase 2.1_Execution Plan.md  ROADMAP.md
planning/audit/: AUDIT_10_EXECUTION_PLAN.md  AUDIT_3_EXECUTION_PLAN.md  AUDIT_4_EXECUTION_PLAN.md  AUDIT_5_EXECUTION_PLAN.md  AUDIT_6_EXECUTION_PLAN.md  AUDIT_7_EXECUTION_PLAN.md  AUDIT_8_EXECUTION_PLAN.md  AUDIT_9_EXECUTION_PLAN.md  AUDIT_C2_EXECUTION_PLAN.md  AUDIT_C_EXECUTION_PLAN.md  AUDIT_H2_EXECUTION_PLAN.md  AUDIT_H_EXECUTION_PLAN.md  (+10 more)
scratch/: notes.md
scripts/: ci_check.sh  setup_hooks.sh  verify_reproduction.sh
status/: LEVEL_00.md  LEVEL_01.md  LEVEL_02A.md  LEVEL_02B.md  LEVEL_04.md  LEVEL_06.md
tests/: conftest.py
tools/: __init__.py  download_corpora.py
(+1938 files in other folders)
