[project]
name = "voynich_research"
version = "0.1.0"
description = "Assumption-aware foundational infrastructure for Voynich Manuscript research."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Voynich Foundation Contributors" }
]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.12",
  "pandas>=2.2",
  "scikit-learn>=1.4",
  "networkx>=3.2",
  "python-Levenshtein>=0.25",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "PyYAML>=6.0.1",
  "opencv-python>=4.9",
  "Pillow>=10.3",
  "SQLAlchemy>=2.0",
  "alembic>=1.13",
  "rich>=13.7",
  "typer>=0.12",
  "python-dotenv>=1.0",
  "python-docx>=1.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "types-PyYAML",
  "ipykernel>=6.29",
  "matplotlib>=3.8",
]
duckdb = [
  "duckdb>=1.0.0",
  "pyarrow>=16.0.0",
]
viz = [
  "matplotlib>=3.8",
  "umap-learn>=0.5.11",
]

[project.scripts]
foundation = "phase1_foundation.cli.main:app"
visualization = "support_visualization.cli.main:app"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "phase1_foundation*",
    "phase2_analysis*",
    "phase3_synthesis*",
    "phase4_inference*",
    "phase5_mechanism*",
    "phase6_functional*",
    "phase7_human*",
    "phase8_comparative*",
    "phase10_admissibility*",
    "phase11_stroke*",
    "phase12_mechanical*",
    "phase14_machine*",
    "support_visualization*",
    "core_audit*"
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  "data",
  "runs",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E203"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true
exclude = [
  "^data/",
  "^runs/",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
pythonpath = ["src"]
testpaths = [
    "tests/phase1_foundation",
    "tests/phase2_analysis",
    "tests/phase3_synthesis",
    "tests/phase4_inference",
    "tests/phase5_mechanism",
    "tests/phase6_functional",
    "tests/phase7_human",
    "tests/phase8_comparative",
    "tests/phase10_admissibility",
    "tests/phase11_stroke",
    "tests/phase12_mechanical",
    "tests/phase14_machine",
    "tests/phase15_rule_extraction",
    "tests/phase16_physical_grounding",
    "tests/phase17_finality",
    "tests/core_audit",
    "tests/core_skeptic",
    "tests/integration"
]
filterwarnings = [
    "ignore::RuntimeWarning:networkx",
]
markers = [
    "unit: Pure unit tests with no external dependencies",
    "integration: Tests requiring database or filesystem state",
    "slow: Tests taking more than 10 seconds",
    "requires_db: Tests that need a populated SQLite database",
]
